OrderService refactoring